--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <li>Early investor private sale commenced &amp; closed</li>
                             <li>Early service prototyping</li>
                             <li>Blockchain testing environments</li>
-                            <li>Backend and infrastructure development</li>
+                            <li>Backend &amp; infrastructure development</li>
                             <li>Expansion of key hires</li>
                             <li>Key partner collaboration with Blockchain Frontier</li>
                         </ul>
@@ -284,7 +284,7 @@
                             <li>Infrastructure automation &amp; continuous integration</li>
                             <li>MVP &amp; utility token sign-off</li>
                             <li>Bounty program kick off</li>
-                            <li>Security auditing and white hacking</li>
+                            <li>Security auditing &amp; white hacking</li>
                             <li>Whitelisted public token sale begins</li>
                         </ul>
                     </div>
@@ -302,10 +302,10 @@
                         <ul>
                             <li>Mobile app pilot</li>
                             <li>Token circulation &amp; retail trading</li>
-                            <li>Early adopter partnerships and merchants</li>
+                            <li>Early adopter partnerships &amp; merchants</li>
                             <li>Multiple cash-in channels</li>
                             <li>Local operations team</li>
-                            <li>Reward for participation and payments</li>
+                            <li>Reward for participation &amp; payments</li>
                         </ul>
                     </div>
                 </div>
@@ -356,12 +356,12 @@
                     <div class="step__text">
                             <ul>
                                 <li>Market expansion</li>
-                                <li>Remittance and cross border
+                                <li>Remittance &amp; cross border
                                         transfers</li>
                                 <li> Advanced financial services
                                     </li>
                                 <li>AI CONNECT: intelligently
-                                        connecting buyers and sellers</li>
+                                        connecting buyers &amp; sellers</li>
                             </ul>
                         </div>
                 </div>
