--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <ul>
                             <li>circum.world start</li>
                             <li>Corporate structuring and set-up</li>
-                            <li>Core team and advisors assembled (UK &amp; Australia)</li>
+                            <li>Core team &amp; advisors assembled (UK/Aus)</li>
                             <li>Business plan &amp; system design completed</li>
                         </ul>
                     </div>
