--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
                     <div class="step__text">
                         <h3>Prototyping &amp; Private Sale</h3>
                         <ul>
-                            <li>Private sale commences(early investors Sept)</li>
+                            <li>Private sale commencement (early investors during September)</li>
                             <li>Early service prototyping</li>
                             <li>Blockchain testing environments</li>
                             <li>Backend &amp; infrastructure development</li>
-                            <li>Key partner collaboration with Blockchain Frontier</li>
+                            <li>Partner collaboration with Blockchain Frontier</li>
                         </ul>
                     </div>
                 </div>
