--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             <li>Early service prototyping</li>
                             <li>Blockchain testing environments</li>
                             <li>Backend &amp; infrastructure development</li>
-                            <li>Partner collaboration with Blockchain Frontier</li>
+                            <li>Blockchain Frontier partner collaboration </li>
                         </ul>
                     </div>
                 </div>
