--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="step__text">
                         <h3>Iterative Service Development</h3>
                         <ul>
-                            <li>Mobile app r&amp;d</li>
+                            <li>Mobile App R&amp;D begins</li>
                             <li>Additional team key hires</li>
                             <li>Infra automation &amp; continuous integration</li>
                             <li>MVP &amp; utility token sign-off</li>
