--- a/index.html
+++ b/index.html
@@ -556,6 +556,29 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                        <div class="team-member">
+                            <figure class="team-member__image">
+                                <img src="images/team-7.jpg" alt="">
+                            </figure>
+
+                            <div class="team-member__desc">
+                                <h3>Kim Hansen</h3>
+                                <p>Blockchain Advisor</p>
+                            </div>
+
+                            <div class="socials">
+                                <ul>
+                                    <li>
+                                        <a target="_blank" href="https://www.linkedin.com/in/kimhansenyeah/" target="_blank" class="social-item">
+                                            <img src="images/linkedin-logo.svg" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
             <div class="team wow fadeIn" data-wow-duration="2s">
                 <h3>Partners</h3>
@@ -569,7 +592,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Simon Sorockyj</h3>
-                                <p>Blockchain Advisor</p>
+                                <p>Blockchain &amp ICO Advisor</p>
                             </div>
 
                             <div class="socials">
@@ -591,7 +614,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Kim Hansen</h3>
-                                <p>ICO Advisor</p>
+                                <p>Blockchain Advisor</p>
                             </div>
 
                             <div class="socials">
