--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Dr Clarence Tan</h3>
-                                <p>Exponential Technology and AI</p>
+                                <p>Exponential Technology &amp; AI</p>
                             </div>
 
                             <div class="socials">
@@ -555,7 +555,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            
             
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                         <div class="team-member">
@@ -579,7 +579,7 @@
                             </div>
                         </div>
                     </div>
-
+</div>
             <div class="team wow fadeIn" data-wow-duration="2s">
                 <h3>Partners</h3>
 
