--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Kim Hansen</h3>
-                                <p>Blockchain Advisor</p>
+                                <p>Blockchain Expert Advisor</p>
                             </div>
 
                             <div class="socials">
@@ -614,7 +614,7 @@
 
                             <div class="team-member__desc">
                                 <h3>Dean Cannell</h3>
-                                <p>Blockchain and ICO Advisor</p>
+                                <p>Blockchain &amp; ICO Advisor</p>
                             </div>
 
                             <div class="socials">
@@ -643,7 +643,7 @@
     <section class="section faq-section"  id="faq">
         <div class="container">
             
-            <div class="section-heading">
+            <div class="section-heading wow slideInLeft" data-wow-duration="1.5s">
                 <h2>FAQ</h2>
             </div>
     
