--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                 </a>
 
                 <div class="footer-copyright">
-                    <p>© 2018 circum.world Ltd - All rights reserved.</p>
+                    <p>© 2018-2019 circum.world Ltd - All rights reserved.</p>
                 </div>
 
             </div>
